--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
     <main>
         <div id="sidebar">
-            <div id="logo"></div>
-            <ul id="page-list"></ul>
-            <ul id="util-list"></ul>
+            <div id="logo">DASHBOARD</div>
+            <ul id="page-list">
+                <li><a href="">Home</a></li>
+                <li><a href="">Profile</a></li>
+                <li><a href="">Messages</a></li>
+                <li><a href="">History</a></li>
+                <li><a href="">Tasks</a></li>
+                <li><a href="">Comminities</a></li>
+            </ul>
+            <ul id="util-list">
+                <li><a href="">Settings</a></li>
+                <li><a href="">Support</a></li>
+                <li><a href="">Privacy</a></li>
+            </ul>
         </div>
         <div id="header">
             <div>
