--- a/index.html
+++ b/index.html
@@ -26,20 +26,27 @@
             </ul>
         </div>
         <div id="header">
-            <div>
+            <div id="header-top-row">
                 <div id="search-bar">
-
+                    <input type="text" id="search-input">
                 </div>
                 <div id="account-utils">
-
+                    <img src="imgs/profile_pic.jpg" alt="profile-picture">
+                    <p>Davut Dagtekin</p>
                 </div>
             </div>
-            <div>
+            <div id="header-bottom-row">
                 <div id="welcome-section">
-
+                    <img src="" alt="profile-picture">
+                    <span>
+                    <p>Hi there,</p>
+                    <p>Davut Dagtekin</p>
+                    </span>
                 </div>
                 <div id="buttons">
-
+                    <button type="button"></button>
+                    <button type="button"></button>
+                    <button type="button"></button>
                 </div>
             </div>
         </div>
