--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
                     <input type="text" id="search-input">
                 </div>
                 <div id="account-utils">
-                    <img src="imgs/profile_pic.jpg" alt="profile-picture">
+                    <img src="imgs/profilepic.png" alt="profile-picture">
                     <p>Davut Dagtekin</p>
                 </div>
             </div>
             <div id="header-bottom-row">
                 <div id="welcome-section">
-                    <img src="" alt="profile-picture">
+                    <img src="imgs/profilepic.png" alt="profile-picture">
                     <span>
                     <p>Hi there,</p>
-                    <p>Davut Dagtekin</p>
+                    <p><strong>Davut Dagtekin</strong></p>
                     </span>
                 </div>
                 <div id="buttons">
-                    <button type="button"></button>
-                    <button type="button"></button>
-                    <button type="button"></button>
+                    <button type="button" class="btn">New</button>
+                    <button type="button" class="btn">Upload</button>
+                    <button type="button" class="btn">Share</button>
                 </div>
             </div>
         </div>
