--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         <div id="header">
             <div id="header-top-row">
                 <div id="search-bar">
+                    <a href=""><svg style="width: 40px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg></a>
                     <input type="text" id="search-input">
                 </div>
                 <div id="account-utils">
+                    <a href=""><svg style="width: 40px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2A2 2 0 0 0 10 4A2 2 0 0 0 10 4.29C7.12 5.14 5 7.82 5 11V17L3 19V20H21V19L19 17V11C19 7.82 16.88 5.14 14 4.29A2 2 0 0 0 14 4A2 2 0 0 0 12 2M12 6A5 5 0 0 1 17 11V18H7V11A5 5 0 0 1 12 6M21 7V13H23V7H21M21 15V17H23V15H21M10 21A2 2 0 0 0 12 23A2 2 0 0 0 14 21H10Z" /></svg></a>
                     <img src="imgs/profilepic.png" alt="profile-picture">
                     <p>Davut Dagtekin</p>
                 </div>
@@ -39,8 +41,7 @@
                 <div id="welcome-section">
                     <img src="imgs/profilepic.png" alt="profile-picture">
                     <span>
-                    <p>Hi there,</p>
-                    <p><strong>Davut Dagtekin</strong></p>
+                    <p><strong>Hi there, <br><span style="font-size: 30px;">Davut Dagtekin</span></strong></p>
                     </span>
                 </div>
                 <div id="buttons">
@@ -50,7 +51,27 @@
                 </div>
             </div>
         </div>
-        <div id="content"></div>
+        <div id="content">
+            <div id="projects">
+                <p id="projects-header-text">My Projects</p>
+                <div id="projects-container">
+                    <div class="project-card">1</div>
+                    <div class="project-card">2</div>
+                    <div class="project-card">3</div>
+                    <div class="project-card">4</div>
+                    <div class="project-card">5</div>
+                    <div class="project-card">6</div>
+                </div>
+            </div>
+            <div id="announcements">
+                <p id="announcements-header-text">Announcements</p>
+                <div id="announcements-container"></div>
+            </div>
+            <div id="trending">
+                <p id="trending-header-text">trending</p>
+                <div id="trending-container"></div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
