--- a/index.html
+++ b/index.html
@@ -5,34 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <main>
         <div id="sidebar">
             <div id="logo">DASHBOARD</div>
             <ul id="page-list">
-                <li><a href="">Home</a></li>
-                <li><a href="">Profile</a></li>
-                <li><a href="">Messages</a></li>
-                <li><a href="">History</a></li>
-                <li><a href="">Tasks</a></li>
-                <li><a href="">Comminities</a></li>
+                <li><a href=""><i class="fa fa-home"></i>   Home</a></li>
+                <li><a href=""><i class="fa fa-address-card" aria-hidden="true"></i> Profile</a></li>
+                <li><a href=""><i class="fa fa-comment-o" aria-hidden="true"></i> Messages</a></li>
+                <li><a href=""><i class="fa fa-clock-o" aria-hidden="true"></i> History</a></li>
+                <li><a href=""><i class="fa fa-files-o" aria-hidden="true"></i> Tasks</a></li>
+                <li><a href=""> <i class="fa fa-users" aria-hidden="true"></i> Comminities</a></li>
             </ul>
             <ul id="util-list">
-                <li><a href="">Settings</a></li>
-                <li><a href="">Support</a></li>
-                <li><a href="">Privacy</a></li>
+                <li><a href=""> <i class="fa fa-cog" aria-hidden="true"></i> Settings</a></li>
+                <li><a href=""> <i class="fa fa-question-circle-o" aria-hidden="true"></i> Support</a></li>
+                <li><a href=""> <i class="fa fa-shield" aria-hidden="true"></i> Privacy</a></li>
             </ul>
         </div>
         <div id="header">
             <div id="header-top-row">
                 <div id="search-bar">
-                    <a href=""><svg style="width: 40px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg></a>
+                    <a href=""><i class="fa fa-search"></i></a>
                     <input type="text" id="search-input">
                 </div>
                 <div id="account-utils">
-                    <a href=""><svg style="width: 40px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2A2 2 0 0 0 10 4A2 2 0 0 0 10 4.29C7.12 5.14 5 7.82 5 11V17L3 19V20H21V19L19 17V11C19 7.82 16.88 5.14 14 4.29A2 2 0 0 0 14 4A2 2 0 0 0 12 2M12 6A5 5 0 0 1 17 11V18H7V11A5 5 0 0 1 12 6M21 7V13H23V7H21M21 15V17H23V15H21M10 21A2 2 0 0 0 12 23A2 2 0 0 0 14 21H10Z" /></svg></a>
+                    <a href=""><i class="fa fa-bell" aria-hidden="true" style="color: red; font-size: larger;"></i></a>
                     <img src="imgs/profilepic.png" alt="profile-picture">
                     <p>Davut Dagtekin</p>
                 </div>
@@ -55,17 +55,78 @@
             <div id="projects">
                 <p id="projects-header-text">My Projects</p>
                 <div id="projects-container">
-                    <div class="project-card">1</div>
-                    <div class="project-card">2</div>
-                    <div class="project-card">3</div>
-                    <div class="project-card">4</div>
-                    <div class="project-card">5</div>
-                    <div class="project-card">6</div>
+                    <div class="project-card">
+                        <p class="card-header">Project 1</p>
+                        <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer orci ante, tristique eget dolor ac, condimentum dapibus erat. Phasellus porttitor ut nunc eu elementum. Ut rutrum semper diam. Suspendisse erat lectus, tempus a ipsum et, eleifend tempus felis.</div>
+                        <div class="card-icons"><a href=""><i class="fa fa-star-o" aria-hidden="true"></i>
+                        </a><a href=""><i class="fa fa-eye" aria-hidden="true"></i>
+                        </a><a href=""><i class="fa fa-share-alt" aria-hidden="true"></i>
+                        </a></div>
+                    </div>
+                    <div class="project-card">
+                        <p class="card-header">Project 2</p>
+                        <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer orci ante, tristique eget dolor ac, condimentum dapibus erat. Phasellus porttitor ut nunc eu elementum. Ut rutrum semper diam. Suspendisse erat lectus, tempus a ipsum et, eleifend tempus felis.</div>
+                        <div class="card-icons"><a href=""><i class="fa fa-star-o" aria-hidden="true"></i>
+                        </a><a href=""><i class="fa fa-eye" aria-hidden="true"></i>
+                        </a><a href=""><i class="fa fa-share-alt" aria-hidden="true"></i>
+                        </a></div>
+                    </div>
+                    <div class="project-card">
+                        <p class="card-header">Project 3</p>
+                        <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer orci ante, tristique eget dolor ac, condimentum dapibus erat. Phasellus porttitor ut nunc eu elementum. Ut rutrum semper diam. Suspendisse erat lectus, tempus a ipsum et, eleifend tempus felis.</div>
+                        <div class="card-icons"><a href=""><i class="fa fa-star-o" aria-hidden="true"></i>
+                        </a><a href=""><i class="fa fa-eye" aria-hidden="true"></i>
+                        </a><a href=""><i class="fa fa-share-alt" aria-hidden="true"></i>
+                        </a></div>
+                    </div>
+                    <div class="project-card">
+                        <p class="card-header">Project 4</p>
+                        <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer orci ante, tristique eget dolor ac, condimentum dapibus erat. Phasellus porttitor ut nunc eu elementum. Ut rutrum semper diam. Suspendisse erat lectus, tempus a ipsum et, eleifend tempus felis.</div>
+                        <div class="card-icons"><a href=""><i class="fa fa-star-o" aria-hidden="true"></i>
+                        </a><a href=""><i class="fa fa-eye" aria-hidden="true"></i>
+                        </a><a href=""><i class="fa fa-share-alt" aria-hidden="true"></i>
+                        </a></div>
+                    </div>
+                    <div class="project-card">
+                        <p class="card-header">Project 5</p>
+                        <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer orci ante, tristique eget dolor ac, condimentum dapibus erat. Phasellus porttitor ut nunc eu elementum. Ut rutrum semper diam. Suspendisse erat lectus, tempus a ipsum et, eleifend tempus felis.</div>
+                        <div class="card-icons"><a href=""><i class="fa fa-star-o" aria-hidden="true"></i>
+                        </a><a href=""><i class="fa fa-eye" aria-hidden="true"></i>
+                        </a><a href=""><i class="fa fa-share-alt" aria-hidden="true"></i>
+                        </a></div>
+                    </div>
+                    <div class="project-card">
+                        <p class="card-header">Project 6</p>
+                        <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer orci ante, tristique eget dolor ac, condimentum dapibus erat. Phasellus porttitor ut nunc eu elementum. Ut rutrum semper diam. Suspendisse erat lectus, tempus a ipsum et, eleifend tempus felis.</div>
+                        <div class="card-icons"><a href=""><i class="fa fa-star-o" aria-hidden="true"></i>
+                        </a><a href=""><i class="fa fa-eye" aria-hidden="true"></i>
+                        </a><a href=""><i class="fa fa-share-alt" aria-hidden="true"></i>
+                        </a></div>
+                    </div>
                 </div>
             </div>
             <div id="announcements">
                 <p id="announcements-header-text">Announcements</p>
-                <div id="announcements-container"></div>
+                <div id="announcements-container">
+                    <div class="announcement-card">
+                        <p class="announcement-header">
+                        s
+                        </p>
+                        <div class="announcement-text"></div>
+                    </div>
+                    <div class="announcement-card">
+                        <p class="announcement-header">
+                        s
+                        </p>
+                        <div class="announcement-text"></div>
+                    </div>
+                    <div class="announcement-card">
+                        <p class="announcement-header">
+                        s
+                        </p>
+                        <div class="announcement-text"></div>
+                    </div>
+                </div>
             </div>
             <div id="trending">
                 <p id="trending-header-text">trending</p>
