finished announcemenet secction

--- a/index.html
+++ b/index.html
@@ -110,21 +110,21 @@
                 <div id="announcements-container">
                     <div class="announcement-card">
                         <p class="announcement-header">
-                        s
+                        Announcement 1
                         </p>
-                        <div class="announcement-text"></div>
+                        <div class="announcement-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer orci ante, tristique eget dolor ac.</div>
                     </div>
                     <div class="announcement-card">
                         <p class="announcement-header">
-                        s
+                        Announcement 2
                         </p>
-                        <div class="announcement-text"></div>
+                        <div class="announcement-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer orci ante, tristique eget dolor ac.</div>
                     </div>
                     <div class="announcement-card">
                         <p class="announcement-header">
-                        s
+                        Announcement 3
                         </p>
-                        <div class="announcement-text"></div>
+                        <div class="announcement-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer orci ante, tristique eget dolor ac.</div>
                     </div>
                 </div>
             </div>
