--- a/index.html
+++ b/index.html
@@ -114,12 +114,14 @@
                         </p>
                         <div class="announcement-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer orci ante, tristique eget dolor ac.</div>
                     </div>
+                    <hr>
                     <div class="announcement-card">
                         <p class="announcement-header">
                         Announcement 2
                         </p>
                         <div class="announcement-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer orci ante, tristique eget dolor ac.</div>
                     </div>
+                    <hr>
                     <div class="announcement-card">
                         <p class="announcement-header">
                         Announcement 3
@@ -129,8 +131,29 @@
                 </div>
             </div>
             <div id="trending">
-                <p id="trending-header-text">trending</p>
-                <div id="trending-container"></div>
+                <p id="trending-header-text">Trending</p>
+                <div id="trending-container">
+                    <div class="trending-row">
+                        <img src="imgs/userImage.png" alt="user-profile-picture">
+                        <p class="trending-author">@tegan</p>
+                        <p class="trending-name">Good Project</p>
+                    </div>
+                    <div class="trending-row">
+                        <img src="imgs/userImage.png" alt="user-profile-picture">
+                        <p class="trending-author">@davut</p>
+                        <p class="trending-name">Very Good Project</p>
+                    </div>
+                    <div class="trending-row">
+                        <img src="imgs/userImage.png" alt="user-profile-picture">
+                        <p class="trending-author">@kendall</p>
+                        <p class="trending-name">Brilliant Project</p>
+                    </div>
+                    <div class="trending-row">
+                        <img src="imgs/userImage.png" alt="user-profile-picture">
+                        <p class="trending-author">@alex</p>
+                        <p class="trending-name">Cool Project</p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
